<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/stock"
    tools:context=".company.Company_signup">
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress_company_signup"
        android:visibility="gone"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/company_name"
        android:textColorHint="@color/hintcolor"
        android:textColor="@color/texttcolor"
        android:hint="@string/name" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/company_email"
        android:inputType="textWebEmailAddress"
        android:textColorHint="@color/hintcolor"
        android:textColor="@color/texttcolor"
        android:hint="@string/email" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/company_phone"
        android:textColorHint="@color/hintcolor"
        android:textColor="@color/texttcolor"
        android:hint="@string/mobile" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/company_password"
        android:inputType="textPassword"
        android:textColorHint="@color/hintcolor"
        android:textColor="@color/texttcolor"
        android:hint="@string/pass" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/company_confirmPassword"
        android:inputType="textPassword"
        android:textColorHint="@color/hintcolor"
        android:textColor="@color/texttcolor"
        android:hint="@string/confirmPass" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/company_register"
        android:textSize="15dp"
        android:text="@string/register"
        android:background="@color/accent_material_dark" />
</LinearLayout>
